assigment 2
print("hello \
      world")
hello       world
("
 this is srujith
 ")
  File "<ipython-input-4-4f312c426d37>", line 1
    ("
      ^
SyntaxError: EOL while scanning string literal
print("""
this is srujith
""")
this is srujith

print('''lets upgrade python''')
lets upgrade python
print("hello \n \t world")
hello 
 	 world
name="xyz"
age=21
marks=90.91
print("the name is",name,"age:",age,"marks:",marks)
the name is xyz age: 21 marks: 90.91
print("the name is %s the age is %d the marks is %0.2f"%(name,age,marks))
the name is xyz the age is 21 the marks is 90.91
print(f"the name is {name} the age is {age} the marks is {marks}")
the name is xyz the age is 21 the marks is 90.91
a=10
print(a)
10
x=y=z=100
x
100
y
100
z
100
id(x)
1954537232
id(y)
1954537232
id(z)
1954537232
del(x)
x
---------------------------------------------------------------------------
NameError                                 Traceback (most recent call last)
<ipython-input-21-6fcf9dfbd479> in <module>
----> 1 x

NameError: name 'x' is not defined
5+3
8
5-3
2
5*3
15
5%3
2
5/3
1.6666666666666667
5//4
1
a=10
b=15
a<b
True
a==b
False
a>b
False
a>=b
False
a<=b
True
a!=b
True
a=10
b=15
bin(a)
'0b1010'
bin(b)
'0b1111'
a | b
15
a & b
10
a^b
5
a~b
  File "<ipython-input-45-832d31484aaa>", line 1
    a~b
     ^
SyntaxError: invalid syntax
~a
-11
~b
-16
a=10
b=15
a>15 and b<5
False
a>15 or b<15
False
not a<5
True
not b>5
False
str1="something"
"e" in str1
True
"s"not in str1
False
a=10
b=15
a is b
False
a is not b
True
10*20/10
20.0
10+30%5*4+30
40
15/4*3+2*5
21.25
